--- a/python.ipynb
+++ b/python.ipynb
@@ -115,13 +115,56 @@
         "obj1=process()\n",
         "obj1.calc()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "write a python program to remove character from the string"
+      ],
+      "metadata": {
+        "id": "IiBXQKAa4OrG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=input(\"enter the string\")\n",
+        "char=input(\"enter the character you want to remove from the string\")\n",
+        "s=\" \"\n",
+        "for i in a:\n",
+        "  if(i==\"a\"):\n",
+        "    continue\n",
+        "  else:\n",
+        "    s+=i\n",
+        "print(s)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5LKT9eBv4fbl",
+        "outputId": "6f5f6ed7-b65b-4c4d-ed43-b4af79b9793b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathima\n",
+            "enter the character you want to remove from the stringa\n",
+            " fthim\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMYVWEP0C7svHIG2r8Ydy/u",
+      "authorship_tag": "ABX9TyM/eYALDOS1i9wDdz6XrANr",
       "include_colab_link": true
     },
     "kernelspec": {
