--- a/python.ipynb
+++ b/python.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -164,8 +154,7 @@
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM/eYALDOS1i9wDdz6XrANr",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyM/eYALDOS1i9wDdz6XrANr"
     },
     "kernelspec": {
       "display_name": "Python 3",
