--- a/python.ipynb
+++ b/python.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
         "id": "5LKT9eBv4fbl",
         "outputId": "6f5f6ed7-b65b-4c4d-ed43-b4af79b9793b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,13 +148,85 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "progarm to find the missing numbers in the array that contains the numbers 1 to 100 \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yHJo7uh_BhkY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1, 2, 3, 4, 5, 6, None, 8, 9, 10, 11, None, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, None, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]"
+      ],
+      "metadata": {
+        "id": "I5fFxWVPBwU9"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m,n=[],[]\n",
+        "for i in range(1,100):\n",
+        "  if(i==a[i-1]):\n",
+        "    m.append(i)\n",
+        "  else:\n",
+        "    n.append(i)\n",
+        "print(\"numbers present in the array\",m)\n",
+        "print(\"numbers absent in the array\",n)\n",
+        "    \n"
+      ],
+      "metadata": {
+        "id": "p_Mstpc7FDMi",
+        "outputId": "f374f14d-2bbe-4bdb-9780-f4bfe2d91d4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "numbers present in the array [1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]\n",
+            "numbers absent in the array [7, 12, 45]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7rZEcfU5FDWB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "31XFfoiwFDcR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM/eYALDOS1i9wDdz6XrANr"
+      "authorship_tag": "ABX9TyPXBXoDNwzBkUCXVoLuBwTb"
     },
     "kernelspec": {
       "display_name": "Python 3",
