--- a/python.ipynb
+++ b/python.ipynb
@@ -185,11 +185,11 @@
         "    \n"
       ],
       "metadata": {
-        "id": "p_Mstpc7FDMi",
-        "outputId": "f374f14d-2bbe-4bdb-9780-f4bfe2d91d4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p_Mstpc7FDMi",
+        "outputId": "f374f14d-2bbe-4bdb-9780-f4bfe2d91d4c"
       },
       "execution_count": 16,
       "outputs": [
@@ -204,29 +204,51 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "to find whether the number is prime or not"
+      ],
       "metadata": {
-        "id": "7rZEcfU5FDWB"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Jqbu7XZ3ua2o"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "n=int(input(\"enter the number \"))\n",
+        "#prime number=it is multiplied only by itself and 1\n",
+        "for i in range(2,n):\n",
+        "  if(n%i==0):\n",
+        "    print(\"not prime\")\n",
+        "    break\n",
+        "else:\n",
+        "    print(\"prime\")"
+      ],
       "metadata": {
-        "id": "31XFfoiwFDcR"
+        "id": "LZ-sy3eZuhMM",
+        "outputId": "062219a9-4f5d-4dcc-c38d-0575f0380eb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number 13\n",
+            "prime\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPXBXoDNwzBkUCXVoLuBwTb"
+      "authorship_tag": "ABX9TyN0D2rBvXVZJMotzZI0K2m7"
     },
     "kernelspec": {
       "display_name": "Python 3",
