--- a/python.ipynb
+++ b/python.ipynb
@@ -225,11 +225,11 @@
         "    print(\"prime\")"
       ],
       "metadata": {
-        "id": "LZ-sy3eZuhMM",
-        "outputId": "062219a9-4f5d-4dcc-c38d-0575f0380eb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LZ-sy3eZuhMM",
+        "outputId": "062219a9-4f5d-4dcc-c38d-0575f0380eb9"
       },
       "execution_count": 7,
       "outputs": [
@@ -242,13 +242,77 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "python program to count occurence of given characters in string"
+      ],
+      "metadata": {
+        "id": "EfcfaCunwdIR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "string=input(\"enter the string\")\n",
+        "l=[]\n",
+        "for i in string:\n",
+        "  print(i,string.count(i))\n"
+      ],
+      "metadata": {
+        "id": "32yfyXLtwsYJ",
+        "outputId": "c7fae864-58f3-412a-a32a-b402bb65c3be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathima\n",
+            "f 1\n",
+            "a 2\n",
+            "t 1\n",
+            "h 1\n",
+            "i 1\n",
+            "m 1\n",
+            "a 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the above code may not be optimal as it also counts the character that already exists to avoid  make use of dictionary or list\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ncgqVN3h3nLo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ao_cCYXQ8AXS"
+      },
+      "execution_count": 13,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN0D2rBvXVZJMotzZI0K2m7"
+      "authorship_tag": "ABX9TyPxEBosrJNuSnIz4gcMB5ol"
     },
     "kernelspec": {
       "display_name": "Python 3",
