--- a/python.ipynb
+++ b/python.ipynb
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "I5fFxWVPBwU9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
         "id": "p_Mstpc7FDMi",
         "outputId": "f374f14d-2bbe-4bdb-9780-f4bfe2d91d4c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "id": "LZ-sy3eZuhMM",
         "outputId": "062219a9-4f5d-4dcc-c38d-0575f0380eb9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,19 +300,41 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "string=input(\"enter the string\")\n",
+        "lists=[]\n",
+        "for i in string:\n",
+        "  for j in lists:\n",
+        "    if j[0]==i:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    lists.append([i,1])\n",
+        "print(lists)"
       ],
       "metadata": {
-        "id": "Ao_cCYXQ8AXS"
+        "id": "Ao_cCYXQ8AXS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "12164248-cb6c-469b-fbdf-584969e5257c"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathima\n",
+            "[['f', 1], ['a', 2], ['t', 1], ['h', 1], ['i', 1], ['m', 1]]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxEBosrJNuSnIz4gcMB5ol"
+      "authorship_tag": "ABX9TyMfzCXzrtPvUf+bYwV2S689"
     },
     "kernelspec": {
       "display_name": "Python 3",
