--- a/python.ipynb
+++ b/python.ipynb
@@ -289,7 +289,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "the above code may not be optimal as it also counts the character that already exists to avoid  make use of dictionary or list\n",
+        "the above code may not be optimal as it also counts the character that already exists to avoid that make use of dictionary or list\n",
         "\n",
         "\n"
       ],
@@ -334,7 +334,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfzCXzrtPvUf+bYwV2S689"
+      "authorship_tag": "ABX9TyOUx4SRwr87kiig8AhBUMhz"
     },
     "kernelspec": {
       "display_name": "Python 3",
