--- a/python.ipynb
+++ b/python.ipynb
@@ -1,16 +1,14 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "51GAkMYOLeZc"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# problem 1 \n",
-        "#to reverse the number"
-      ]
+        "problem 1 \n",
+        "`to reverse the number`\n"
+      ],
+      "metadata": {
+        "id": "M7xJTyMWSsVY"
+      }
     },
     {
       "cell_type": "code",
@@ -109,7 +107,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "write a python program to remove character from the string"
+        "\n",
+        "`write a python program to remove character from the string`"
       ],
       "metadata": {
         "id": "IiBXQKAa4OrG"
@@ -152,7 +151,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "progarm to find the missing numbers in the array that contains the numbers 1 to 100 \n",
+        "`progarm to find the missing numbers in the array that contains the numbers 1 to 100 `\n",
         "\n",
         "\n"
       ],
@@ -206,7 +205,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "to find whether the number is prime or not"
+        "`to find whether the number is prime or not`\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Jqbu7XZ3ua2o"
@@ -246,7 +247,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "python program to count occurence of given characters in string"
+        "`python program to count occurence of given characters in string`"
       ],
       "metadata": {
         "id": "EfcfaCunwdIR"
@@ -318,7 +319,7 @@
         },
         "outputId": "12164248-cb6c-469b-fbdf-584969e5257c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +335,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUx4SRwr87kiig8AhBUMhz"
+      "authorship_tag": "ABX9TyMFIvTwyO8GHOQS8wm4FdZN"
     },
     "kernelspec": {
       "display_name": "Python 3",
