--- a/python.ipynb
+++ b/python.ipynb
@@ -121,7 +121,7 @@
         "char=input(\"enter the character you want to remove from the string\")\n",
         "s=\" \"\n",
         "for i in a:\n",
-        "  if(i==\"a\"):\n",
+        "  if(i==char):\n",
         "    continue\n",
         "  else:\n",
         "    s+=i\n",
@@ -133,9 +133,46 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5LKT9eBv4fbl",
-        "outputId": "6f5f6ed7-b65b-4c4d-ed43-b4af79b9793b"
+        "outputId": "650040bb-2dbe-4192-f7a5-9fbe89e6e866"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathima\n",
+            "enter the character you want to remove from the stringf\n",
+            " athima\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "another concise version using join"
+      ],
+      "metadata": {
+        "id": "-dzy9iD6T96C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=input(\"enter the string\")\n",
+        "char=input(\"enter the character you want to remove from the string\")\n",
+        "s=\" \".join([i for i in a if i!=char])\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "id": "x3DfpZJQUDJy",
+        "outputId": "d72110aa-bae4-442e-b84d-2df3cdc95b37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +180,7 @@
           "text": [
             "enter the stringfathima\n",
             "enter the character you want to remove from the stringa\n",
-            " fthim\n"
+            "f t h i m\n"
           ]
         }
       ]
@@ -330,12 +367,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To find the duplicates in the array that has 1-100 numbers arranged"
+      ],
+      "metadata": {
+        "id": "HFzzKMe0ZakP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n2=[]\n",
+        "n=[]\n",
+        "miss=[]\n",
+        "lis=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 38, 69, 40, 71, 72, 73, 74, 24, 76, 77, 88, 79, 80, 78, 82, 43, 84, 85, 86, 87, 88, 39, 90, 21, 92, 93, 94, 95, 96, 97, 98, 99, 100] \n",
+        "for i in lis:\n",
+        "  for j in n:\n",
+        "    if j[0]==i:\n",
+        "      break\n",
+        "  else:\n",
+        "      n1=lis.count(i)\n",
+        "      n.append([i,n1])\n",
+        "for k in n:\n",
+        "   if k[1]>1:\n",
+        "       n2.append(k[0])\n",
+        "print(\"duplicates in the list\",n2)"
+      ],
+      "metadata": {
+        "id": "IJ8FKNyxZbhE",
+        "outputId": "fe83da30-8e7c-424d-8c71-f861b0279489",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "duplicates in the list [21, 24, 38, 39, 40, 43, 88]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFIvTwyO8GHOQS8wm4FdZN"
+      "authorship_tag": "ABX9TyPpDSLJJ6I32WsHkjNYWvat"
     },
     "kernelspec": {
       "display_name": "Python 3",
