--- a/python.ipynb
+++ b/python.ipynb
@@ -166,11 +166,11 @@
         "print(s)"
       ],
       "metadata": {
-        "id": "x3DfpZJQUDJy",
-        "outputId": "d72110aa-bae4-442e-b84d-2df3cdc95b37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x3DfpZJQUDJy",
+        "outputId": "d72110aa-bae4-442e-b84d-2df3cdc95b37"
       },
       "execution_count": 4,
       "outputs": [
@@ -371,7 +371,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To find the duplicates in the array that has 1-100 numbers arranged"
+        "`To find the duplicates in the array that has 1-100 numbers ordered`"
       ],
       "metadata": {
         "id": "HFzzKMe0ZakP"
@@ -397,11 +397,11 @@
         "print(\"duplicates in the list\",n2)"
       ],
       "metadata": {
-        "id": "IJ8FKNyxZbhE",
-        "outputId": "fe83da30-8e7c-424d-8c71-f861b0279489",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IJ8FKNyxZbhE",
+        "outputId": "fe83da30-8e7c-424d-8c71-f861b0279489"
       },
       "execution_count": 5,
       "outputs": [
@@ -418,7 +418,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpDSLJJ6I32WsHkjNYWvat"
+      "authorship_tag": "ABX9TyNRt7bkQbvElTlwHdSNI5kB"
     },
     "kernelspec": {
       "display_name": "Python 3",
