--- a/python.ipynb
+++ b/python.ipynb
@@ -135,7 +135,7 @@
         "id": "5LKT9eBv4fbl",
         "outputId": "650040bb-2dbe-4192-f7a5-9fbe89e6e866"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "id": "x3DfpZJQUDJy",
         "outputId": "d72110aa-bae4-442e-b84d-2df3cdc95b37"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
         "id": "IJ8FKNyxZbhE",
         "outputId": "fe83da30-8e7c-424d-8c71-f861b0279489"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,12 +413,76 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`To check if two strings are anagram`\n",
+        "Anagram:\n",
+        "    If one string is formed by rearranging the characters of another string then it is said to be anagram\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0D5iLzByVyna"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str1=input(\"enter the string 1\")\n",
+        "str2=input(\"enter the string 2\")\n",
+        "l=[]\n",
+        "l1=[]\n",
+        "for i in str1:\n",
+        "  for j in l:\n",
+        "    if j[0]==i:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    l.append([i,1])\n",
+        "for k in str2:\n",
+        "  for m in l1:\n",
+        "    if m[0]==k:\n",
+        "      m[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    l1.append([k,1])\n",
+        "print(l)\n",
+        "print(l1)\n",
+        "for char in l:\n",
+        "  if char not in l1:\n",
+        "    print(\"not anagram\")\n",
+        "    break\n",
+        "else:\n",
+        "  print(\"anagram\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3cvUY32uWQA4",
+        "outputId": "fb2adb12-57e9-4280-dcab-4b40bf9ada92"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the string 1act\n",
+            "enter the string 2ac\n",
+            "[['a', 1], ['c', 1], ['t', 1]]\n",
+            "[['a', 1], ['c', 1]]\n",
+            "not anagram\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRt7bkQbvElTlwHdSNI5kB"
+      "authorship_tag": "ABX9TyPv3N+yX7U94E9f1PUephgI"
     },
     "kernelspec": {
       "display_name": "Python 3",
