--- a/python.ipynb
+++ b/python.ipynb
@@ -463,7 +463,7 @@
         "id": "3cvUY32uWQA4",
         "outputId": "fb2adb12-57e9-4280-dcab-4b40bf9ada92"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,12 +477,68 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python for, How to find all pairs in array of integers whose sum is equal to given number.`"
+      ],
+      "metadata": {
+        "id": "OQe5f92eLtFT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"Enter how many numbers you want to add in the list: \"))\n",
+        "l = []\n",
+        "for i in range(n):\n",
+        "    num = int(input(\"Enter a number to add to the list: \"))\n",
+        "    l.append(num)\n",
+        "\n",
+        "t = int(input(\"Enter the target value: \"))\n",
+        "m = []\n",
+        "n1 = 0\n",
+        "while n1 < n-1:\n",
+        "    m1 = n1 + 1\n",
+        "    while m1 < n:\n",
+        "        if l[n1] + l[m1] == t:\n",
+        "            m.append([l[n1], l[m1]])\n",
+        "        m1 += 1\n",
+        "    n1 += 1\n",
+        "\n",
+        "print(m)\n"
+      ],
+      "metadata": {
+        "id": "uwK3juSpL75k",
+        "outputId": "b0303d68-c156-4fa6-a4cb-aa0266330c1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter how many numbers you want to add in the list: 5\n",
+            "Enter a number to add to the list: 1\n",
+            "Enter a number to add to the list: 2\n",
+            "Enter a number to add to the list: 3\n",
+            "Enter a number to add to the list: 2\n",
+            "Enter a number to add to the list: 3\n",
+            "Enter the target value: 4\n",
+            "[[1, 3], [1, 3], [2, 2]]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv3N+yX7U94E9f1PUephgI"
+      "authorship_tag": "ABX9TyNayaBQw0VAQFn4ShwS3v19"
     },
     "kernelspec": {
       "display_name": "Python 3",
