--- a/python.ipynb
+++ b/python.ipynb
@@ -516,7 +516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,12 +533,55 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to print the Fibonacci series using iterative method.`"
+      ],
+      "metadata": {
+        "id": "22q8g2qmkHiR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the range\"))\n",
+        "first=0\n",
+        "second=1\n",
+        "print(first,end=\" \")\n",
+        "print(second,end=\" \")\n",
+        "for i in range(n):\n",
+        "  third=first+second\n",
+        "  print(third,end=\" \")\n",
+        "  first=second\n",
+        "  second=third\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Qaapbrr-kGy-",
+        "outputId": "eb0f4abb-cf87-4395-cfc0-4a8110f43b7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the range5\n",
+            "0 1 1 2 3 5 8 "
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNayaBQw0VAQFn4ShwS3v19"
+      "authorship_tag": "ABX9TyP8YW7NW+/mHRNbaRnbQd2C"
     },
     "kernelspec": {
       "display_name": "Python 3",
