--- a/python.ipynb
+++ b/python.ipynb
@@ -565,7 +565,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,12 +576,53 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`to check if two strings are palindrome or not`"
+      ],
+      "metadata": {
+        "id": "gprhffoC4OS6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def check(a):\n",
+        "  str1=a\n",
+        "  str3=str1[::-1]\n",
+        "  if(str3==str1):\n",
+        "    print(\"palindrome\")\n",
+        "  else:\n",
+        "    print(\"not palindrome\")\n",
+        "a=input(\"enter the string\")\n",
+        "check(a)"
+      ],
+      "metadata": {
+        "id": "3y36w3xM4X0M",
+        "outputId": "7ea1a19e-e535-4ce2-e21a-def6232f8be1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringanna\n",
+            "palindrome\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8YW7NW+/mHRNbaRnbQd2C"
+      "authorship_tag": "ABX9TyPetFF3yWNB/qt3wZCVi6ZK"
     },
     "kernelspec": {
       "display_name": "Python 3",
