--- a/python.ipynb
+++ b/python.ipynb
@@ -606,7 +606,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,12 +617,66 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to print the Fibonacci series using recursive method.`"
+      ],
+      "metadata": {
+        "id": "71mxNCCk3tE2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(x,y,z):\n",
+        "  third=x+y\n",
+        "  print(third)\n",
+        "  if(z!=0):\n",
+        "    first=y\n",
+        "    second=third\n",
+        "    fibonacci(first,second,z-1)\n",
+        "\n",
+        "\n",
+        "n=int(input(\"enter the range\"))\n",
+        "first=0\n",
+        "second=1\n",
+        "print(first)\n",
+        "print(second)\n",
+        "fibonacci(first,second,n)"
+      ],
+      "metadata": {
+        "id": "n3_4OzpY5NTc",
+        "outputId": "84228c73-616f-4355-c186-a1a8ab6b0053",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the range5\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPetFF3yWNB/qt3wZCVi6ZK"
+      "authorship_tag": "ABX9TyNVItvJRX/MgF4c7/hy//A6"
     },
     "kernelspec": {
       "display_name": "Python 3",
