--- a/python.ipynb
+++ b/python.ipynb
@@ -671,12 +671,56 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# Python program to check given character is vowel or consonant\n",
+        "\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "z_X1HpaAfT5-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "char=input(\"enter the character\")\n",
+        "if char in [\"a\",\"e\",\"i\",\"o\",\"u\"]:\n",
+        "  print(\"vowel\")\n",
+        "else:\n",
+        "  print(\"consonant\")"
+      ],
+      "metadata": {
+        "id": "T_Orv3jSf5da",
+        "outputId": "b558fff1-9db4-4233-ed40-a6ad2101cb7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the characterr\n",
+            "consonant\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVItvJRX/MgF4c7/hy//A6"
+      "authorship_tag": "ABX9TyPs1SNa65uGzh69UwxPf2ky"
     },
     "kernelspec": {
       "display_name": "Python 3",
