--- a/python.ipynb
+++ b/python.ipynb
@@ -632,7 +632,7 @@
       "source": [
         "def fibonacci(x,y,z):\n",
         "  third=x+y\n",
-        "  print(third)\n",
+        "  print(third,end=\" \")\n",
         "  if(z!=0):\n",
         "    first=y\n",
         "    second=third\n",
@@ -642,32 +642,25 @@
         "n=int(input(\"enter the range\"))\n",
         "first=0\n",
         "second=1\n",
-        "print(first)\n",
-        "print(second)\n",
+        "print(first,end=\" \")\n",
+        "print(second,end=\" \")\n",
         "fibonacci(first,second,n)"
       ],
       "metadata": {
         "id": "n3_4OzpY5NTc",
-        "outputId": "84228c73-616f-4355-c186-a1a8ab6b0053",
+        "outputId": "c52748d9-0a55-4f7a-eef3-bec35cc3f01b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the range5\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "5\n",
-            "8\n",
-            "13\n"
+            "0 1 1 2 3 5 8 13 "
           ]
         }
       ]
@@ -698,11 +691,11 @@
         "  print(\"consonant\")"
       ],
       "metadata": {
-        "id": "T_Orv3jSf5da",
-        "outputId": "b558fff1-9db4-4233-ed40-a6ad2101cb7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T_Orv3jSf5da",
+        "outputId": "b558fff1-9db4-4233-ed40-a6ad2101cb7f"
       },
       "execution_count": 1,
       "outputs": [
@@ -720,7 +713,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPs1SNa65uGzh69UwxPf2ky"
+      "authorship_tag": "ABX9TyMCseNz86bITFu6tohLY1rn"
     },
     "kernelspec": {
       "display_name": "Python 3",
