--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxvehS1E8c9wa5+kYQw/Eu"
+      "authorship_tag": "ABX9TyM/iUcarMAYA+mzsBnFFPfA",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "`Python program to find the largest number in the array`"
       ],
@@ -26,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,6 +86,49 @@
         "obj1 = large()\n",
         "obj1.find_lar()\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to check whether a number is palindrome or not using iterative method.`\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-w_lEQeOKzjO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=input(\"enter the number\")\n",
+        "b=a[::-1]\n",
+        "a=int(a)\n",
+        "b=int(b)\n",
+        "print(type(a))\n",
+        "if(a==b):\n",
+        "  print(\"the given number is palindrome\")\n",
+        "else:\n",
+        "  print(\"the given number is not palindrome\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UHDxnN2bKvhP",
+        "outputId": "4978d96b-3a74-44ab-db7d-0fa016a8566d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number121\n",
+            "<class 'int'>\n",
+            "the given number is palindrome\n"
+          ]
+        }
       ]
     }
   ]
