--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/iUcarMAYA+mzsBnFFPfA",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyM/iUcarMAYA+mzsBnFFPfA"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -118,7 +107,7 @@
         "id": "UHDxnN2bKvhP",
         "outputId": "4978d96b-3a74-44ab-db7d-0fa016a8566d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
