--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/iUcarMAYA+mzsBnFFPfA"
+      "authorship_tag": "ABX9TyPmdc7QOf/bhdaXUnXYLxmS"
     },
     "kernelspec": {
       "name": "python3",
@@ -116,6 +116,46 @@
             "enter the number121\n",
             "<class 'int'>\n",
             "the given number is palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to check given character is digit or not.`"
+      ],
+      "metadata": {
+        "id": "FChcyTFhvSoF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flag=True\n",
+        "while flag:\n",
+        "    char=input(\"enter the character\")\n",
+        "    if char.isdigit():\n",
+        "      print(\"you entered the digit\")\n",
+        "      flag=False\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z__tHNGvvU_d",
+        "outputId": "3c96938b-c885-446c-af74-52cd682bdc8e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the characterw\n",
+            "enter the characterw\n",
+            "enter the character1\n",
+            "you entered the digit\n"
           ]
         }
       ]
