--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmdc7QOf/bhdaXUnXYLxmS"
+      "authorship_tag": "ABX9TyOE08JxzsH8C9XmOnUP2/ck"
     },
     "kernelspec": {
       "name": "python3",
@@ -146,7 +146,7 @@
         "id": "Z__tHNGvvU_d",
         "outputId": "3c96938b-c885-446c-af74-52cd682bdc8e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,6 +156,51 @@
             "enter the characterw\n",
             "enter the character1\n",
             "you entered the digit\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to find second highest number in an integer array.`"
+      ],
+      "metadata": {
+        "id": "G0Yiw_4GXtpe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enterthe size of the array\"))\n",
+        "l=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "l.sort(reverse=True)\n",
+        "print(l)\n",
+        "print(\"second highest number\",l[1])"
+      ],
+      "metadata": {
+        "id": "caXgutH_XyiQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d6f0d7b-891e-4de1-ccee-bc4d069018b8"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enterthe size of the array4\n",
+            "enter the numbers to add in the array5\n",
+            "enter the numbers to add in the array3\n",
+            "enter the numbers to add in the array6\n",
+            "enter the numbers to add in the array3\n",
+            "[6, 5, 3, 3]\n",
+            "second highest number 5\n"
           ]
         }
       ]
