--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE08JxzsH8C9XmOnUP2/ck"
+      "authorship_tag": "ABX9TyOcbQTBVIOxrFRU5g2NQecD"
     },
     "kernelspec": {
       "name": "python3",
@@ -188,7 +188,7 @@
         },
         "outputId": "5d6f0d7b-891e-4de1-ccee-bc4d069018b8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,6 +204,62 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to check whether a number is palindrome or not using recursive method.`"
+      ],
+      "metadata": {
+        "id": "SKmwU_oFQ-CQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def is_palindrome(n):\n",
+        "    digits = str(n)\n",
+        "    if len(digits) <=1:\n",
+        "        return True\n",
+        "    elif digits[0] != digits[-1]:\n",
+        "        return False\n",
+        "    else:\n",
+        "        return is_palindrome(int(digits[1:-1]))\n",
+        "\n",
+        "n = int(input(\"Enter the number you want to check: \"))\n",
+        "if is_palindrome(n):\n",
+        "    print(\"The number is a palindrome.\")\n",
+        "else:\n",
+        "    print(\"The number is not a palindrome.\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lM9gmDENRC3n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a5e9f4f-d608-4e58-ac96-b913b17d374d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number you want to check: 12\n",
+            "The number is not a palindrome.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d82f-cnXhE1C"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
