--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcbQTBVIOxrFRU5g2NQecD"
+      "authorship_tag": "ABX9TyMulYVRjbbIEy5AsJTqlfEd",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -240,7 +251,7 @@
         },
         "outputId": "6a5e9f4f-d608-4e58-ac96-b913b17d374d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,13 +264,50 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "`Write a program in Python to find top two maximum number in array`"
+      ],
       "metadata": {
-        "id": "d82f-cnXhE1C"
+        "id": "6SuwTyWDtUlS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the numbers to add in the array\"))\n",
+        "  l.append(num)\n",
+        "l.sort(reverse=True)\n",
+        "print(l)\n",
+        "print(\"top two maximum number are {} and {}\".format(l[0],l[1]))"
+      ],
+      "metadata": {
+        "id": "d82f-cnXhE1C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2180cdb-567d-4799-bdc3-af374c01f378"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enterthe size of the array5\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array98\n",
+            "enter the numbers to add in the array124\n",
+            "enter the numbers to add in the array2\n",
+            "enter the numbers to add in the array44\n",
+            "[124, 98, 44, 2, 2]\n",
+            "top two maximum number are 124 and 98\n"
+          ]
+        }
+      ]
     }
   ]
 }
