--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMulYVRjbbIEy5AsJTqlfEd"
+      "authorship_tag": "ABX9TyMsLxygXFY94UAiTDoyooMP"
     },
     "kernelspec": {
       "name": "python3",
@@ -294,6 +294,45 @@
             "enter the numbers to add in the array44\n",
             "[124, 98, 44, 2, 2]\n",
             "top two maximum number are 124 and 98\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`Python program to check given character is digit or not by not using isdigit() method.`"
+      ],
+      "metadata": {
+        "id": "s-iAqWSvvOrb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "ch = input(\"Enter a character : \") \n",
+        "if ch >= '0' and ch <= '9': #unicode values of 0-48 1-49.......9==57 so if we enter character between these unicode valuesit will execute\n",
+        "    \tprint(\"Given Character \", ch, \"is a Digit\")\n",
+        "else:\n",
+        "  \n",
+        "    print(\"Given Character \", ch, \"is not a Digit\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VDpEBCcrvM-j",
+        "outputId": "6ef1bc58-5155-4456-d9c0-ed16392667a8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a character : 6\n",
+            "Given Character  6 is a Digit\n"
           ]
         }
       ]
